--- a/app/view/inc/nav.phtml
+++ b/app/view/inc/nav.phtml
@@ -66,6 +66,13 @@
                                 </ul>
                             </li>
                             <li>
+                                <a href="<?=$version; ?>/getting-started/app-helper">App Helper</a>
+                                <ul class="hidden">
+                                    <li><a href="<?=$version; ?>/getting-started/app-helper#environment">Environment</a></li>
+                                    <li><a href="<?=$version; ?>/getting-started/app-helper#maintenance">Maintenance</a></li>
+                                </ul>
+                            </li>
+                            <li>
                                 <a href="<?=$version; ?>/getting-started/popcorn">Popcorn</a>
                                 <ul class="hidden">
                                     <li><a href="<?=$version; ?>/getting-started/popcorn#basic">Basic Use</a></li>
