--- a/app/view/changelog.phtml
+++ b/app/view/changelog.phtml
@@ -3,6 +3,15 @@
             <main class="col-right bg-white overflow-y-auto pl-24 pr-24 pt-12 pb-12 max-[976px]:pl-12 max-[976px]:pr-12 max-[976px]:pt-4 max-[976px]:pb-4 dark:text-gray-300 dark:bg-gray-900">
                 <div class="main-content">
                     <h2><?=$title; ?></h2>
+                    <h4 id="5.1.0">5.1.0</h4>
+                    <h6>(12/12/2023)</h6>
+                    <ul class="list-disc text-sm ml-8 mb-4 mt-4">
+                        <li class="mb-2">Improved transaction support in <code class="inline-code">pop-db</code></li>
+                        <li class="mb-2">Added the <code class="inline-code">Pop\App</code> helper class in <code class="inline-code">popphp</code></li>
+                        <li class="mb-2">Incorporated <code class="inline-code">vlucas/phpdotenv</code> in <code class="inline-code">popphp</code> to track application-specific variables</li>
+                        <li class="mb-2">Improved application handling and support with <code class="inline-code">pop-kettle</code></li>
+                        <li class="mb-2">Improved color and styling support in <code class="inline-code">pop-console</code></li>
+                    </ul>
                     <h4 id="5.0.0">5.0.0</h4>
                     <h6>(11/08/2023)</h6>
                     <ul class="list-disc text-sm ml-8 mb-4 mt-4">
