--- a/app/view/user-guide/databases.phtml
+++ b/app/view/user-guide/databases.phtml
@@ -1282,12 +1282,12 @@ use Pop\Db\Sql\Migration\AbstractMigration;
 class MyNewMigration extends AbstractMigration
 {
 
-    public function up()
+    public function up(): void
     {
 
     }
 
-    public function down()
+    public function down(): void
     {
 
     }
@@ -1303,7 +1303,7 @@ use Pop\Db\Sql\Migration\AbstractMigration;
 class MyNewMigration extends AbstractMigration
 {
 
-    public function up()
+    public function up(): void
     {
         $schema = $this->db->createSchema();
         $schema->create('users')
@@ -1315,7 +1315,7 @@ class MyNewMigration extends AbstractMigration
         $schema->execute();
     }
 
-    public function down()
+    public function down(): void
     {
         $schema = $this->db->createSchema();
         $schema->drop('users');
